--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -15,11 +15,10 @@
 @import 'includes/navbar';
 @import 'includes/grid';
 @import 'includes/share_buttons';
-@import 'includes/blog_nav.scss';
-@import 'includes/cookie_consent.scss';
-// Posts
+@import 'includes/blog_nav';
+@import 'includes/cookie_consent';
+@import 'includes/tags';
+// Layouts
 @import 'layouts/posts';
 @import 'layouts/blog';
 @import 'layouts/page';
-@import 'layouts/tags';
-@import 'layouts/search';
