--- a/_sass/layouts/_blog.scss
+++ b/_sass/layouts/_blog.scss
@@ -55,6 +55,99 @@
     margin: 0 auto;
 }
 
+/* --- search box --- */
+.search-container {
+  margin: 5px auto;
+  height: 2.7em;
+  position: relative;
+
+  .search-bar {
+    display: none;
+    width: 15em;
+    padding: .6em;
+    margin-left: auto;
+
+    background: $brand-color none;
+    color: $text-color;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
+    -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+
+    &:focus,
+    &:hover {
+      border-color: $link-color;
+      outline: 0;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px $link-shadow;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px $link-shadow;
+    }
+
+    &::-moz-placeholder {
+      color: $search-color;
+      opacity: 1;
+    }
+
+    &:-ms-input-placeholder,
+    &::-webkit-input-placeholder {
+      color: $search-color;
+    }
+  }
+
+  .find-icon {
+    position: absolute;
+    right: 1em;
+    top: .7em;
+  }
+
+  #results-container {
+    display: none;
+    padding: 10px;
+    width: 70%;
+    background: #FFF;
+    border: 1px solid #ccc;
+    position: absolute;
+    right: 0;
+    top: 2.7em;
+    list-style: none;
+    -webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border-radius: 3px;
+  }
+
+  .search-title {
+    border-bottom: 1px solid #ccc;
+
+    a {
+      display: block;
+      font-size: 1.3em;
+      color: $text-color;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+
+    hr {
+      margin: 5px 0;
+    }
+
+    .search-date {
+      color: #636363;
+      font-size: .9em;
+    }
+  }
+}
+
+@media (max-width: $break) {
+  .search-container #results-container {
+    width: 100%;
+  }
+}
+
 /* --- Post listing --- */
 .posts {
   .post-teaser {
