--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -34,13 +34,21 @@
  }
 }
 
-.post-content > footer {
-  margin-bottom: 1em;
-}
+.post-wrapper {
 
-.tag-wrapper article footer {
-    padding: 0 3% 3%;
-    border-bottom: 1px solid #ccc;
+  header {
+    h1 {
+      margin: 0;
+
+      &.title {
+        padding: 0.5em 0;
+      }
+    }
+  }
+
+  .post-content > footer {
+    margin-bottom: 1em;
+  }
 }
 
 footer {
@@ -57,12 +65,6 @@ footer {
 
   a.button {
     margin-left: 1em;
-  }
-}
-
-header {
-  h1 {
-    margin: 0;
   }
 }
 
