add categories page

--- a/_sass/layouts/_blog.scss
+++ b/_sass/layouts/_blog.scss
@@ -90,6 +90,10 @@
     position: absolute;
     right: 1em;
     top: .5em;
+
+    &:hover {
+      color: $theme-color;
+    }
   }
 
   #results-container {
