--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -8,7 +8,7 @@
     <!-- Displays the posts and pages that contains the tag-->
     <div class="posts">
         {% for tag in sorted_tags %}
-        <h3 id="{{ tag | first | slugify }}" class="tag-anchor">
+        <h3 id="{{ tag | first | cgi_escape }}" class="tag-anchor">
             <i class="fa fa-tag fa-fw"></i> {{ tag[0] | replace:'-', ' ' }}
         </h3>
 
