category page design

--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -1,3 +1,29 @@
+.post-wrapper,
+.tag-wrapper,
+.category-wrapper {
+  margin-top: $padding-x-small;
+
+  article {
+    background: $brand-color;
+    box-shadow: 3px 3px 5px #ccc;
+    width: 95%;
+    padding: $padding-x-small;
+
+   header {
+     margin-bottom: $padding-x-small;
+     text-align: center;
+   }
+
+   a:hover {
+     @extend .body-link;
+   }
+
+   .footnotes {
+     font-size: 0.9em;
+   }
+ }
+}
+
 h1.title {
   @extend .header-txt-shadow;
 }
