--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,25 +1,27 @@
 {% assign sorted_categories = site.categories | sort %}
 
-<div class="tag-wrapper">
+<div class="category-wrapper">
   <article>
     <!-- Displays the posts that contains the category-->
     <div class="posts">
         {% for category in sorted_categories %}
-        <h3 id="{{ category | first | slugify }}" class="tag-anchor">
-            <i class="fa fa-tag fa-fw"></i> {{ category[0] | replace:'-', ' ' }}
-        </h3>
+        <div class="post">
+          <h3 id="{{ category | first | slugify }}" class="category-anchor">
+              <i class="fa fa-folder fa-fw"></i> {{ category[0] | replace:'-', ' ' }}
+          </h3>
 
-        <!-- Posts and collection for each categories -->
-        <div class="category-posts">
-            <!-- Posts -->
-            {% for post in category[1] %}
-                <h4 class="category-title">
-                    <a href="{{ post.url | relative_url }}">
-                        <i class="fa fa-file-text-o" aria-hidden="true"></i>
-                        {{ post.title }}
-                    </a>
-                </h4>
-            {% endfor %}
+          <!-- Posts and collection for each categories -->
+          <div class="category-posts">
+              <!-- Posts -->
+              {% for post in category[1] %}
+                  <h4 class="category-title">
+                      <a href="{{ post.url | relative_url }}">
+                          <i class="fa fa-file-text-o" aria-hidden="true"></i>
+                          {{ post.title }}
+                      </a>
+                  </h4>
+              {% endfor %}
+          </div>
         </div>
         {% endfor %}
     </div>
