--- a/_sass/includes/_tags.scss
+++ b/_sass/includes/_tags.scss
@@ -1,36 +1,4 @@
-.tag-wrapper {
-  margin-bottom: $padding-x-small;
-
-  .posts {
-    padding: $padding-x-small;
-  }
-
-  .tag-list {
-    text-align: center;
-
-    div.meta {
-        display: none;
-    }
-
-    a.button {
-
-      &:hover {
-        color: $meta;
-        border: 1px solid $meta;
-      }
-
-      &.hover-white:hover {
-        color: $brand-color;
-      }
-    }
-  }
-
-  article footer {
-      padding: 0 3% 3%;
-      border-bottom: 1px solid #ccc;
-  }
-}
-
+/* tag list in all pages */
 .tag-list {
   text-align: left;
 
@@ -49,40 +17,73 @@
   }
 }
 
-.tag-anchor {
-  margin: .5em 0 0;
+/* tag list in tags page */
+.tag-wrapper {
+  margin-bottom: $padding-x-small;
 
-  a {
-    &:hover {
-      text-decoration: none;
+  .tag-list {
+    text-align: center;
+
+    div.meta {
+        display: none;
+    }
+
+    a.button {
+      &:hover {
+        color: $meta;
+        border: 1px solid $meta;
+      }
+
+      &.hover-white:hover {
+        color: $brand-color;
+      }
     }
   }
-}
 
-.tag-posts {
-  display: inline-block;
-  width: 100%;
+  .posts {
+    padding: $padding-x-small;
 
-  .tag-title {
-    margin-top: .3em;
-    margin-bottom: 0;
-    font-weight: normal;
+    .tag-posts {
+      display: inline-block;
+      width: 100%;
+
+      .tag-title {
+        margin-top: .3em;
+        margin-bottom: 0;
+        font-weight: normal;
+
+        a {
+          margin-left: $padding-x-small;
+        }
+      }
+
+      .meta {
+        display: inline;
+        float: right;
+        font-size: 0.7em;
+        line-height: normal;
+      }
+
+      @media screen and (max-width: $sm-break) {
+        .meta {
+          display: none;
+        }
+      }
+    }
+  }
+
+  .tag-anchor {
+    margin: .5em 0 0;
 
     a {
-      margin-left: $padding-x-small;
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 
-  .meta {
-    display: inline;
-    float: right;
-    font-size: 0.7em;
-    line-height: normal;
-  }
-}
-
-@media screen and (max-width: $sm-break) {
-  .tag-posts .meta {
-    display: none;
+  article footer {
+      padding: 0 3% 3%;
+      border-bottom: 1px solid #ccc;
   }
 }
