--- a/_sass/type-on-strap.scss
+++ b/_sass/type-on-strap.scss
@@ -18,6 +18,7 @@
 @import 'includes/blog_nav';
 @import 'includes/cookie_consent';
 @import 'includes/tags';
+@import 'includes/categories';
 // Layouts
 @import 'layouts/posts';
 @import 'layouts/blog';
