--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -4,7 +4,7 @@
   <article>
     <!-- Displays the posts that contains the category-->
     <div class="posts">
-        {% for category in sorted_categories limit:5 %}
+        {% for category in sorted_categories %}
         <div class="post">
           <h3 id="{{ category | first | slugify }}" class="category-anchor">
               <i class="fa fa-folder fa-fw"></i> {{ category[0] | replace:'-', ' ' }}
@@ -13,7 +13,7 @@
           <!-- Posts and collection for each categories -->
           <div class="category-posts">
               <!-- Posts -->
-              {% for post in category[1] %}
+              {% for post in category[1] limit:5 %}
                   <h4 class="category-title">
                       <a href="{{ post.url | relative_url }}">
                           <i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i>
