--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -6,7 +6,7 @@
     <div class="posts">
         {% for category in sorted_categories %}
         <div class="post">
-          <h3 id="{{ category | first | slugify }}" class="category-anchor">
+          <h3 id="{{ category | first | cgi_escape }}" class="category-anchor">
               <i class="fa fa-folder fa-fw"></i> {{ category[0] | replace:'-', ' ' }}
           </h3>
 
