--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -25,12 +25,10 @@
               {% endfor %}
           </div>
           {% if category[1].size > 5 %}
-          <h4 class="category-title">
-            <a href="/category/{{ category | first | cgi_escape }}" class="more">
-            더보기
+          <a href="/category/{{ category | first | cgi_escape }}" class="more">
+            <h4>더보기</h4>
             <i class="fa fa-angle-double-right fa-fw" aria-hidden="true"></i>
-            </a>
-          </h4>
+          </a>
           {% endif %}
         </div>
         {% endfor %}
