--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -2,6 +2,8 @@
 
 <div class="tag-wrapper">
   <article>
+    <h1 class="all-tags">All Tags</h1>
+
     <!-- Displays the list of tags-->
     {% include tags_cloud.html %}
 
