--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -34,3 +34,15 @@
     </div>
   </article>
 </div>
+<section>
+  <script type="text/javascript">
+  $(function(){
+    $('a').click(function () {
+      $('html, body').animate({
+        scrollTop: $($.attr(this, 'href')).offset().top
+      }, 500);
+      return false;
+    });
+  });
+  </script>
+</section>
