--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,8 +8,8 @@ layout: page
     <!-- Displays the posts that contains the category-->
     <div class="posts">
       <div class="post">
-        <h3 id="{{ category | cgi_escape }}" class="category-anchor">
-          <i class="fa fa-folder fa-fw"></i> {{ category[0] | replace:'-', ' ' }}
+        <h3 id="{{ category }}" class="category-anchor">
+          <i class="fa fa-folder fa-fw"></i> {{ category }}
         </h3>
 
         <!-- Posts and collection for each categories -->
