--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -56,7 +56,7 @@
 			});
 
 			$('#Go2Top').click(function(){
-				$('html, body').animate({scrollTop:0}, '300');
+				$('html, body').animate({scrollTop:0});
 			});
 
 			$('nav a#pull').click(function(){
