--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -38,3 +38,10 @@ h1.title {
   margin-top: 5px;
   text-shadow: 1px 1px 2px $text-shadow;
 }
+
+.meta {
+  color: $meta;
+  letter-spacing: 0.1em;
+  margin: 0;
+  text-transform: uppercase;
+}
