--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,13 +3,17 @@ layout: default
 ---
 <div class="post-wrapper">
   <article {% if page.feature-img or page.color %}class="feature-image" {% endif %}>
-    <header id="main" style="">
+    <header id="main">
       <div class="title-padder">
         {% if page.hide_title %}
         <div class="feature-image-padding"></div>
         {% else %}
         <h1 id="{{ page.title | cgi_escape }}" class="title">{{ page.title }}</h1>
-        {% include post_info.html date=page.date %}
+        <div class="post-date">
+            <p class="meta">
+              {{ page.date | date: "%B %-d, %Y" }}
+            </p>
+        </div>
         {% endif %}
       </div>
     </header>
