--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -15,7 +15,17 @@ layout: page
         <!-- Posts and collection for each categories -->
         <div class="category-posts">
             <!-- Posts -->
-            {{ category }}
+            {% for post in site.categories[category] %}
+                <h4 class="category-title">
+                    <a href="{{ post.url | relative_url }}">
+                        <i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i>
+                        {{ post.title }}
+                    </a>
+                    <div class="meta">
+                        {{ post.date | date: "%B %-d, %Y" }}
+                    </div>
+                </h4>
+            {% endfor %}
         </div>
       </div>
     </div>
