--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -19,9 +19,9 @@
           <span>
             <header>
               <div class="category meta">
-                <a href="/category/{{ post.category }}">
+                <a href="/category/{{ post.categories }}">
                     <i class="fa fa-folder fa-fw"></i>
-                    {{ post.category }}
+                    {{ post.categories }}
                 </a>
               </div>
               <h1>
