--- a/_sass/includes/_tags.scss
+++ b/_sass/includes/_tags.scss
@@ -21,8 +21,8 @@ html {
   }
 }
 
-.blog-wrapper, tag-wrapper {
-  .tag-list meta {
+.blog-wrapper, .tag-wrapper {
+  .tag-list .meta {
     display: none;
   }
 }
